Fix/application logo stretch (#1740)
* fix: issue with organisation logo stretching horizontally if app owner name is longer than the logo

* fix: return 'small' if incorrect size attribute is set in application metadata for organisation logo

--- a/src/components/presentation/OrganisationLogo/OrganisationLogo.module.css
+++ b/src/components/presentation/OrganisationLogo/OrganisationLogo.module.css
@@ -5,10 +5,6 @@
   gap: var(--fds-spacing-2);
 }
 
-.img {
-  width: 100%;
-}
-
 .small {
   height: 32px;
 }
